@@ -11,6 +11,7 @@ WriteMakefile( NAME            => 'Brackup',
                    'Digest::SHA1' => 0,
                    'DBI'          => 0,
                    'String::Escape' => 0,
+                   'IO::InnerFile'  => 0,
                },
                ABSTRACT_FROM => 'lib/Brackup.pm',
                AUTHOR     => 'Brad Fitzpatrick <brad@danga.com>',
