@@ -3,16 +3,19 @@ package Brackup::CompositeChunk;
 use strict;
 use warnings;
 use Carp qw(croak);
-use Digest::SHA1 qw(sha1_hex);
+use Fcntl qw(SEEK_SET);
+use Brackup::Util qw(tempfile io_sha1 io_print_to_fh); 
 
 use fields (
             'used_up',
             'max_size',
-            'data',
             'target',
             'digest',  # memoized
             'finalized', # if we've written ourselves to the target yet
             'subchunks', # the chunks this composite chunk is made of
+            'sha1',         # Digest::SHA1 object
+            '_chunk_file',  # the file containing the whole composite chunk
+            '_chunk_fh',    # chunk_file handle
             );
 
 sub new {
@@ -21,9 +24,10 @@ sub new {
     $self->{used_up}   = 0; # bytes
     $self->{finalized} = 0; # false
     $self->{max_size}  = $root->max_composite_size;
-    $self->{data}      = '';
     $self->{target}    = $target;
     $self->{subchunks} = [];
+    $self->{sha1}      = Digest::SHA1->new;
+    ($self->{_chunk_fh}, $self->{_chunk_file}) = tempfile();
     return $self;
 }
 
@@ -33,9 +37,8 @@ sub append_little_chunk {
 
     my $from = $self->{used_up};
     $self->{used_up} += $schunk->backup_length;
-    $self->{data}    .= ${ $schunk->chunkref };
+    io_print_to_fh($schunk->chunkref, $self->{_chunk_fh}, $self->{sha1});
     my $to = $self->{used_up};
-    die "ASSERT" unless CORE::length($self->{data}) == $self->{used_up};
 
     $schunk->set_composite_chunk($self, $from, $to);
     push @{$self->{subchunks}}, $schunk;
@@ -43,7 +46,7 @@ sub append_little_chunk {
 
 sub digest {
     my $self = shift;
-    return $self->{digest} ||= "sha1:" . Digest::SHA1::sha1_hex($self->{data});
+    return $self->{digest} ||= "sha1:" . $self->{sha1}->hexdigest;
 }
 
 sub can_fit {
@@ -82,11 +85,31 @@ sub stored_chunk_from_dup_internal_raw {
 *backup_digest = \&digest;
 sub backup_length {
     my $self = shift;
-    return CORE::length($self->{data});
+    return $self->{used_up};
 }
-sub chunkref { return \ $_[0]->{data} }
+# return handle to data
+sub chunkref {
+    my $self = shift;
+    croak "ASSERT: _chunk_fh not opened" unless $self->{_chunk_fh}->opened;
+    seek($self->{_chunk_fh}, 0, SEEK_SET);
+    return $self->{_chunk_fh};
+}
 sub inventory_value {
     die "ASSERT: don't expect this to be called";
+}
+# called when chunk data not needed anymore
+sub forget_chunkref {
+    my $self = shift;
+    if ($self->{_chunk_fh}) {
+      close $self->{_chunk_fh};
+      delete $self->{_chunk_fh};
+    }
+    if ($self->{_chunk_file}) {
+      die "ASSERT: used_up: $self->{used_up}, -s _chunk_file: " . -s $self->{_chunk_file}
+          unless -s $self->{_chunk_file} == $self->{used_up};
+      unlink $self->{_chunk_file};
+      delete $self->{_chunk_file};
+    }
 }
 # </duck-typing>
 
